Replace collect(Collectors.toList()) to toList()